# hetero

./: CMakeLists.txt  README.md
data/: garnet.unist.ac.kr
modules/: CMakeLists.txt
modules/hetero_cmdparser/: CMakeLists.txt  hetero_cmdparser.cpp  hetero_cmdparser.hpp
modules/hetero_csv/: CMakeLists.txt
modules/hetero_data/: CMakeLists.txt  hetero_csv.cpp  hetero_csv.hpp  hetero_data.hpp
profiler/: autorun.sh
research/: CMakeLists.txt
research/cmig14/: CMakeLists.txt  add.cu  add.hpp  cmdparser.hpp  ddt.hpp  dft.cu  dft.hpp  div.cu  div.hpp  dwt.cu  dwt.hpp  dxt.cu  dyt.cu  dzt.cu  mul.cu  mul.hpp  psnr.hpp  shrink.cu  shrink.hpp  sub.cu  sub.hpp  sum.hpp  test_16gpu.cu  test_8gpu.cu  test_8gpu.mpi.cu  test_8gpu.openmp.cu  test_add.cu  test_csmri25d_1gpu_conjgrad.cu  test_csmri25d_1gpu_richardson.cu  test_csmri25d_1gpu_singleiter.cu  test_ddt.cu  test_dft.cu  test_div.cu  test_dwt.cu  test_mul.cu  test_sub.cu  test_sum.cu  timer.hpp  utility.hpp
research/ldav14/: CMakeLists.txt
research/ldav14/debug_stencil_3d/: CMakeLists.txt  stencil_3d.sweep.txt  stencil_3d.txt  stencil_3d_naive_7points.cu  stencil_3d_professor.cu  test_real_stencil_3d.cu  test_stencil_3d.cu
research/ldav14/float_stencil_3d07/: CMakeLists.txt  test_stencil_3d07.cu  test_stencil_3d07.m  test_stencil_3d07.txt
research/ldav14/ref_stencil_3d/: CMakeLists.txt  ref_stencil_3d.cu  trid.h
research/ldav14/segment_threshold/: CMakeLists.txt  app_bilateral.cu  app_segment_threshold.cu  app_segment_threshold.txt  app_stddev.cu  app_stddev.txt  app_threshold.cu  bilateral_3d.cu  make_segment_3d.cpp  median_3d.cu  median_3d.hpp  minimum_3d.hpp  stddev_3d.cu  stddev_3d.hpp  sys_copy.cpp  sys_segment_threshold.cpp  threshold_3d.hpp
research/ldav14/stencil_3d/: execute_global_mem.sh  execute_shared_mem.sh  global_mem.cu  sample_global_mem.sh  shared_mem.cu  template_global_mem.cu  template_shared_mem.cu  test_stencil_3d_global  test_stencil_3d_shared
research/ldav14/terabyte/: bilateral_3d.hpp  sys_terabyte.cpp
samples/: CMakeLists.txt
samples/benchmark/: CMakeLists.txt
samples/benchmark/bandwidth_io/: CMakeLists.txt  bandwidth_io.cpp  bandwidth_io.cpp.bak
samples/cpp/: CMakeLists.txt
samples/cpp/csv/: CMakeLists.txt  csv.cpp  csv.hpp  dsv.cpp  dsv_filter.hpp  exprtk.hpp  strtk.hpp
samples/cpp/labeling/: CMakeLists.txt  labeling.cpp
samples/cpp/split_data/: CMakeLists.txt  cmdparser.hpp  cpp-split_data.cpp  cpp-split_data.cu  cpu_timer.hpp  datparser.cpp  datparser.hpp  helper_math.h  split_data.cpp
samples/cpp/system_1d/: CMakeLists.txt  system_1d.cpp
samples/cuda/: CMakeLists.txt
samples/cuda/convolution/: CMakeLists.txt  cuda-convolution.cu
samples/generator/: CMakeLists.txt
samples/generator/stencil_2d/: CMakeLists.txt  make_stencil_2d.cpp  stencil_2d.cu  stencil_2d.hpp  test_stencil_2d.cu
samples/generator/stencil_3d/: CMakeLists.txt  make_stencil_3d.cpp  stencil_3d.cu  stencil_3d.hpp  test_stencil_3d.cu
samples/hetero/: CMakeLists.txt
samples/hetero/io/: CMakeLists.txt  io.cpp
samples/hybrid/: CMakeLists.txt
samples/hybrid/bandwidth/: CMakeLists.txt  bandwidth.cu
samples/hybrid/bilateral/: CMakeLists.txt  bilateral.cu
samples/hybrid/decompose_2d/: CMakeLists.txt  decompose_2d.cu  decompose_2d.cu.bak
samples/hybrid/eikonal/: CMakeLists.txt  hybrid-golden_eikonal.cu
samples/hybrid/exchange_2d/: CMakeLists.txt  exchange_2d.cu  new  3.txt
samples/hybrid/exchange_3d/: CMakeLists.txt  exchange_3d.cu
samples/hybrid/heatflow/: CMakeLists.txt  cmdparser.cpp  cmdparser.hpp  heatflow.cu  hybrid-golden_heatflow.cu  hybrid-heatflow.cu  hybrid-heatflow_real.cu
samples/hybrid/io_2d/: CMakeLists.txt  io_2d.cu
samples/hybrid/io_3d/: CMakeLists.txt  app_io_strip_3d.cpp  io_3d.cpp  sys_io_strip_3d.cpp
samples/hybrid/stream_io_2d/: CMakeLists.txt  stream_io_2d.cu
samples/hybrid/virtual_system_2d/: CMakeLists.txt  app_hello_world_2d.cpp  app_io_2d.cpp  sys_hello_world_2d.cpp  sys_io_2d.cpp  system_2d.cpp
samples/hybrid/virtual_system_3d/: CMakeLists.txt  app_io_3d.cpp  sys_io_3d.cpp
samples/ldav14/: CMakeLists.txt
samples/ldav14/debug_stencil_3d/: CMakeLists.txt  stencil_3d.cu  stencil_3d.hpp  stencil_3d.nostruct.txt  stencil_3d.sweepMiki.txt  stencil_3d.tx1  stencil_3d.txt  stencil_3d_naive_7points.cu  test_real_stencil_3d.cu  test_stencil_3d.cu
samples/ldav14/float_stencil_3d07/: CMakeLists.txt  diary  stencil_3d07.cu  stencil_3d07.hpp  test_stencil_3d07.cu  test_stencil_3d07.sh  test_stencil_3d07.texture.txt  test_stencil_3d07.texture1d.txt  test_stencil_3d07.txt  test_stencil_3d07.unroll.txt
samples/ldav14/ref_stencil_3d/: ref_stencil_3d.cu  utilities.h
samples/ldav14/segment_threshold/: CMakeLists.txt  app_bilateral.cu  app_copy.cu  app_median.cu  app_minimum.cu  app_segment.cu  bilateral_3d.cu  bilateral_3d.hpp  make_segment_3d.cpp  median_3d.cu  minimum_3d.cu  stddev_3d.cu  sys_copy.cpp  sys_segment.cpp  sys_segment_threshold.cpp  threshold_3d.cu  threshold_3d.hpp
samples/ldav14/stencil_3d/: execute_global_mem.sh  global_mem.cu  log.txt  sample_global_mem.sh  template_global_mem.cu  test_stencil_3d_global
samples/ldav14/terabyte/: CMakeLists.txt  app_terabyte.cu  bilateral_3d.cu  median_3d.cu  median_3d.hpp
samples/matlab/: exchange_2d.m
samples/matlab/toolbox/: bin2mat_cv32fc1.m  bin2mat_cv32fc2.asv  bin2mat_cv32fc2.m  bin2mat_cv8uc1.m  focuss_20d.m  imreadtif.m  imwritetif.m  l1_split_bregman_20d.m  l1_split_bregman_30d.m  mat2bin_cv32fc1.m  mat2bin_cv32fc2.asv  mat2bin_cv32fc2.m  mat2bin_cv8uc1.m  psnr.m  scale1.m  scale255.m
samples/mpi/: CMakeLists.txt
samples/mpi/hello_world/: CMakeLists.txt  hello_world.cpp  mpi_hello_world
samples/mpi/io/: CMakeLists.txt  io.cpp
samples/mpi/mpi_hello_world/: CMakeLists.txt
samples/nn/: CMakeLists.txt  app_neural_network.cu  backpropagation.cu  neural_network.hpp
samples/openmp/: CMakeLists.txt
samples/openmp/scheduler_1d/: CMakeLists.txt  scheduler_1d.cpp
samples/python/: endianness.sh  reverseEndian.sh
tests/: CMakeLists.txt
tests/hetero_csv/: test_hetero_csv.cpp
(+24 files in other folders)
