message(${CMAKE_CURRENT_SOURCE_DIR})
add_subdirectory(debug_stencil_3d)
add_subdirectory(float_stencil_3d07)
add_subdirectory(segment_threshold)
add_subdirectory(ref_stencil_3d)
add_subdirectory(terabyte)
# add_subdirectory(float_stencil_3d13)
# add_subdirectory(float_stencil_3d19)
# add_subdirectory(float_stencil_3d27)