# /hetero/samples/hybrid
add_subdirectory(bandwidth)
add_subdirectory(eikonal)
add_subdirectory(heatflow)
add_subdirectory(bilateral)
add_subdirectory(exchange_2d)
add_subdirectory(exchange_3d)
add_subdirectory(decompose_2d)
add_subdirectory(io_2d)
add_subdirectory(io_3d)
add_subdirectory(virtual_system_2d)
add_subdirectory(virtual_system_3d)
# add_subdirectory(stream_io_2d)
# add_subdirectory(scheduler_1d)
